--- a/static/css/country_details.css
+++ b/static/css/country_details.css
@@ -1,7 +1,7 @@
 :root {
   /* Modo claro */
   --bg-color: #f9f9f9;
-  --text-color: #2b2a2a;
+  --text-color: #000000;
   --accent-color: #356d0d;
   --btn-hover: #5da22c;
   --border-color: #5a9e37;
@@ -10,7 +10,7 @@
 
 body.dark-mode {
   /* Modo oscuro */
-  --bg-color: #1c1c1c;
+  --bg-color: ##2c2c2c;
   --text-color: #e2e2e2;
   --accent-color: #7ac943;
   --btn-hover: #a3ea63;
