--- a/static/css/project.css
+++ b/static/css/project.css
@@ -74,7 +74,7 @@
 
 /* 👇 MODO OSCURO 👇 */
 body.dark-mode .project-content {
-  background-color: #1e1e1e;
+  background-color: #2c2c2c;
   color: #f1f1f1;
   border: 1px solid #5a9e37;
 }
@@ -93,7 +93,7 @@ body.dark-mode .project-content ul li {
 
 body.dark-mode .intro {
   color: #fff;
-  background-color: #121212;
+  background-color: #2c2c2c;
 }
 
 body.dark-mode .intro__overlay {
