--- a/static/css/style.css
+++ b/static/css/style.css
@@ -292,13 +292,13 @@ a:visited {
 
 
 body.dark-mode {
-    background-color: #121212;
+    background-color: #2c2c2c;
     color: #e0e0e0;
 }
 
 .navbar.dark-mode,
 .footer.dark-mode {
-    background-color: #1e1e1e;
+    background-color: #2c2c2c;
 }
 
 .navbar,
@@ -322,7 +322,7 @@ body.dark-mode {
     background-color: #fff;
     margin: 10% auto;
     padding: 20px 30px;
-    border: 1px solid #888;
+    border: 1px solid #a8a8a8;
     border-radius: 12px;
     width: 80%;
     max-width: 600px;
@@ -332,7 +332,7 @@ body.dark-mode {
   }
   
   .modal .close {
-    color: #aaa;
+    color: #ffffff;
     position: absolute;
     top: 12px;
     right: 16px;
@@ -389,6 +389,10 @@ body.dark-mode {
             padding: 1rem;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
             z-index: 1000;
+        }
+
+        .nav-links a {
+            color: #ffffff;
         }
 
         .nav-links.active {
@@ -452,9 +456,9 @@ body.dark-mode {
     }
 
     .legal a {
-        font-size: 0.95rem;
+        font-size: 0.65rem;
         padding: 10px 20px;
-        width: 100%;
+        width: 80%;
         max-width: 280px;
     }
 
